# Fake_Twitter_Ruiners

./: .gitignore  CMakeLists.txt  ILikeManager.h  LikeManager.cpp  LikeManager.h  README.md
Frame/: Feed.cpp  Feed.h
fake_twitter/: CMakeLists.txt  app.cpp
fake_twitter/include/: common.h
fake_twitter/include/fake_twitter/: common.h
fake_twitter/include/fake_twitter/controller/: IController.h  NewsFeed.h
fake_twitter/include/fake_twitter/db/: Field.h  IDBEngine.h
fake_twitter/include/fake_twitter/manager/: ICommentManager.h  IFollowManager.h  ILikeManager.h  IManager.h  ITagManager.h  ITwitManager.h  IUserManager.h  SimpleSchemaTwitManager.h  SimpleSchemaUserManager.h  SimpleSchemaUserManagerBACKUP.h  TwitManager.h  UserManager.h
fake_twitter/include/fake_twitter/model/: BasicComment.h  BasicTwit.h  BasicUser.h  IComment.h  IModel.h  ITag.h  ITwit.h  IUser.h  Structs.h  Tag.h
fake_twitter/include/fake_twitter/view/: Body.h  IView.h  LeftMenu.h  Navbar.h  Profile.h  RightMenu.h
fake_twitter/include/manager/: IManager.h  ITagManager.h  ITwitManager.h
fake_twitter/include/model/: IComment.h  IModel.h  ITag.h  ITwitt.h  IUser.h
fake_twitter/include/view/: MainPageBuilder.h  RightMenu.h
fake_twitter/src/: BasicComment.cpp  BasicTwit.cpp  BasicUser.cpp  Model.cpp  Tag.cpp  model.cpp
fake_twitter/src/controller/: IController.cpp  NewsFeed.cpp
fake_twitter/src/db/: Field.cpp
fake_twitter/src/manager/: IManager.cpp  ITwitManager.cpp  SimpleSchemaTwitManager.cpp  SimpleSchemaUserManager.cpp  SimpleSchemaUserManagerBACKUP.cpp  TwitManager.cpp  UserManager.cpp
fake_twitter/src/model/: BasicUser.cpp  IModel.cpp  ITwit.cpp  IUser.cpp  Tag.cpp
fake_twitter/src/view/: Body.cpp  IView.cpp  MainPageBuilder.cpp  Navbar.cpp  Profile.cpp
tests/: CMakeLists.txt
tests/fake_twitter/: CMakeLists.txt  mocks.h  test_comment.cpp  test_twit.cpp  test_twit_manager.cpp  test_user.cpp  test_view.cpp  test_view_body.cpp  test_view_leftpanel.cpp  test_view_navbar.cpp  test_view_profile.cpp  test_view_rightpanel.cpp
